?? ??? 2007 - 2.5.0-trunk
-------------------------

 * Added ARGS_GET, ARGS_POST, ARGS_GET_NAMES, ARGS_POST_NAMES variables to
   allow seperation of GET and POST arguments.

 * Added MODSEC_BUILD variable that contains the numeric build value based
   on the ModSecurity version.

 * Enhanced debug logging.

 * Cleaned up and clarified some documentation.

 * Performance improvements and greater control over caching transformations.

 * Stricter validation for @validateUtf8Encoding.

 * Capture the match in TX:0 when using "capture" action in phrase match
   operators.

 * Added Cygwin to the list of platforms not supporting the hidden
   visibility attribute.


27 July 2007 - 2.1.2
--------------------

 * Cleaned up and clarified some documentation.

 * Update included core rules to latest version (1.4.3).

 * Enhanced ability to alert/audit failed requests.

 * Do not trigger "pause" action for internal requests.

 * Fixed issue with requests that use internal requests.  These had the
   potential to be intercepted incorrectly when other Apache httpd modules
   that used internal requests were used with mod_security.

 * Added Solaris and Cygwin to the list of platforms not supporting the hidden
   visibility attribute.

 * Fixed decoding full-width unicode in t:urlDecodeUni.

 * Lessen some overhead of debugging messages and calculations.

 * Do not try to intercept a request after a failed rule.  This fixes the
   issue associated with an "Internal Error: Asked to intercept request
   but was_intercepted is zero" error message.

 * Added SecAuditLog2 directive to allow redundent concurrent audit log
   index files.  This will allow sending audit data to two consoles, etc.

 * Small performance improvement in memory management for rule execution.


21 June 2007 - 2.5.0-dev2
-------------------------

 * Reversioned from 2.2.0 base version to 2.5.0 because of the large changeset.

 * Added @within string comparison operator with support for macro expansion.
